# OldMsvcUsage

./: .gitignore  CMakeEnv.ps1  CMakeEnv_clangcl.ps1  CMakeLists.txt  InstallEverything.ps1  OldMicrosoftDownloads.md  SetupEnv.bat  SetupEnv.ps1  VCInit.bat  readme.md
CMake/: VS2005_Win2003SDK_toolchain.cmake  VS2005_Win2003SDK_toolchain_clangcl.cmake  cmake-toolchain-clang-i686.cmake
InstallerScripts/: Install2005Express.ps1  InstallClang.ps1  InstallDirectX9SDK.ps1  InstallWindows2003SDK.ps1  Utilities.ps1
include/clang_crt_patch/: inttypes.h  math.h
include/win_sdk_patch/: winnt.h
test/: CMakeLists.txt  main.c  main.cpp
